@@ -135,6 +135,10 @@ def add_dummy(width: int, height, int, name: str = "", parent: str = "", before:
 	"""Adds a spacer or 'dummy' object."""
 	...
 
+def add_error_series(plot: str, name: str, data: List[List[float]], horizontal: bool = False) -> None:
+	"""Adds an error series to a plot."""
+	...
+
 def add_group(name: str, tip: str = "", parent: str = "", before: str = "", width: int = 0, hide: bool = False, 
 			  horizontal: bool = False, horizontal_spacing: float = -1.0) -> bool:
 	"""Creates a group that other widgets can belong to. The group allows item commands to be issued for all of its members.				Must be closed with the end_group command."""
@@ -211,7 +215,7 @@ def add_label_text(name: str, value: str, color: List[float] = [0.0, 0.0, 0.0, 2
 	"""Adds text with a label. Useful for output values."""
 	...
 
-def add_line_series(plot: str, name: str, data: List[float], color: List[float] = ..., weight: float = 1.0) -> None:
+def add_line_series(plot: str, name: str, data: List[List[float]], color: List[float] = ..., weight: float = 1.0) -> None:
 	"""Adds a line series to a plot."""
 	...
 
@@ -265,7 +269,7 @@ def add_same_line(name: str = "", xoffset: float = 0.0, spacing: float = -1.0, p
 	"""Places a widget on the same line as the previous widget. Can also be used for horizontal spacing."""
 	...
 
-def add_scatter_series(plot: str, name: str, data: List[float], marker: int = 2, size: float = 4.0, weight: float = 1.0, outline: List[float] = ..., fill: List[float] = ...) -> None:
+def add_scatter_series(plot: str, name: str, data: List[List[float]], marker: int = 2, size: float = 4.0, weight: float = 1.0, outline: List[float] = ..., fill: List[float] = ...) -> None:
 	"""Adds a scatter series to a plot."""
 	...
 
@@ -277,7 +281,7 @@ def add_separator(name: str = "", tip: str = "", parent: str = "", before: str =
 	"""Adds a horizontal line."""
 	...
 
-def add_shade_series(plot: str, name: str, data: List[float], color: List[float] = ..., fill: List[float] = ..., weight: float = 1.0) -> None:
+def add_shade_series(plot: str, name: str, data: List[List[float]], color: List[float] = ..., fill: List[float] = ..., weight: float = 1.0) -> None:
 	"""Adds a shade series to a plot."""
 	...
 
@@ -343,7 +347,7 @@ def add_spacing(name: str = "", count: int = 1, parent: str = "", before: str = 
 	"""Adds vertical spacing."""
 	...
 
-def add_stem_series(plot: str, name: str, data: List[float], marker: int = 2, size: float = 4.0, weight: float = 1.0, outline: List[float] = ..., fill: List[float] = ...) -> None:
+def add_stem_series(plot: str, name: str, data: List[List[float]], marker: int = 2, size: float = 4.0, weight: float = 1.0, outline: List[float] = ..., fill: List[float] = ...) -> None:
 	"""Adds a stem series to a plot."""
 	...
 
