@@ -40,6 +40,7 @@ New Commands:
 - Widgets:        Added "add_pie_series" command
 - Plots:          Added "add_shade_series" command
 - Plots:          Added "add_bar_series" command
+- Plots:          Added "add_error_series" command
 - Radio Button:   Added "horizontal" keyword to radio button #215
 
 -----------------------------------------------------------------------
